Enhance TransLink I18n documentation and examples by adding new guides, tutorials, and API references for various platforms including JavaScript, TypeScript, and Vue. Introduce a structured approach for playground applications, ensuring comprehensive coverage of features and usage scenarios. Update pnpm workspace configuration and TypeScript settings for improved project organization.

--- a/apps/tsconfig.json
+++ b/apps/tsconfig.json
@@ -18,30 +18,20 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    
     "baseUrl": ".",
     "paths": {
-      "@translink/i18n-cli": ["packages/cli/src"],
-      "@translink/i18n-runtime": ["packages/runtime/src"],
-      "@translink/vite-plugin": ["packages/vite-plugin/src"]
+      "@translink/i18n-cli": ["../packages/cli/src"],
+      "@translink/i18n-runtime": ["../packages/runtime/src"],
+      "@translink/vite-plugin": ["../packages/vite-plugin/src"]
     }
   },
   "include": [],
   "references": [
     {
-      "path": "./packages/cli"
+      "path": "./docs"
     },
     {
-      "path": "./packages/runtime"
-    },
-    {
-      "path": "./packages/vite-plugin"
-    },
-    {
-      "path": "./apps"
+      "path": "./playground"
     }
   ]
 }
