--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,8 @@
 packages:
   - 'packages/*'
-  - 'apps/*'
+  - 'apps/docs'
+  - 'apps/playground'
+  - 'apps/playground/*'
   - 'tools/*'
 
 # 目录排除配置
