Add demo selector script and update project configuration
- Introduced a new script for selecting and running demo projects in the playground.
- Updated package.json to include demo-related commands and added new devDependencies for TypeScript execution.
- Enhanced .gitignore to exclude TypeScript build info files.
- Updated pnpm-lock.yaml to reflect new dependencies and versions.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Scripts temporary files
+scripts/.tsbuildinfo
+
 # Runtime data
 pids
 *.pid
