Remove ESLint and Prettier configurations along with related dependencies from the project. Update package.json files in CLI and runtime packages to reflect the removal of linting scripts and dependencies. Delete the eslint-config package and its configuration files to streamline the project structure.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
     "test": "turbo run test",
     "type-check": "turbo run type-check",
     "clean": "turbo run clean",
@@ -41,7 +40,6 @@
   },
   "workspaces": [
     "packages/*",
-    "apps/*",
-    "tools/*"
+    "apps/*"
   ]
 }
