--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,15 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "noEmit": true,  // 🔥 不输出文件，只用于类型检查
+    "composite": true,
+    "noEmit": true,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": false,
     "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
     "dist",
