--- a/packages/vite-plugin/tsconfig.json
+++ b/packages/vite-plugin/tsconfig.json
@@ -1,18 +1,9 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true
+    "noEmit": true,
+    "moduleResolution": "bundler"
   },
   "include": [
     "src/**/*"
@@ -21,11 +12,13 @@
     "dist",
     "node_modules",
     "**/*.test.*",
-    "**/*.spec.*"
+    "**/*.spec.*",
+    "**/__tests__/**",
+    "tests/**"
   ],
   "references": [
     {
-      "path": "../cli"
+      "path": "../runtime"
     }
   ]
 }
