--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "preserve",
-    
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    
-    "baseUrl": ".",
-    "paths": {
-      "@translink/i18n-cli": ["packages/cli/src"],
-      "@translink/i18n-runtime": ["packages/runtime/src"],
-      "@translink/vite-plugin": ["packages/vite-plugin/src"]
-    }
-  },
-  "include": [],
+  "files": [],
   "references": [
     {
       "path": "./packages/cli"
