feat(cli): add exceljs dependency and register new commands
- Add exceljs as dependency for Excel export/import functionality
- Register export and import commands in CLI entry point
- Update command registration to include new commands

Part of Phase 2: feature implementation

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,7 +44,8 @@
     "gogocode": "^1.0.0",
     "glob": "^10.3.0",
     "fs-extra": "^11.2.0",
-    "inquirer": "^9.2.0"
+    "inquirer": "^9.2.0",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
