feat(ai): 添加官方SDK依赖并移除axios
- 添加 openai@^4.67.0 官方SDK
- 添加 @google/generative-ai@^0.21.0 官方SDK
- 添加 @anthropic-ai/sdk@^0.30.0 官方SDK
- 移除 axios 依赖（已完全使用官方SDK替代）

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.30.0",
+    "@google/generative-ai": "^0.21.0",
     "commander": "^11.1.0",
     "exceljs": "^4.4.0",
     "fs-extra": "^11.2.0",
@@ -45,6 +47,7 @@
     "gogocode": "^1.0.0",
     "inquirer": "^9.2.0",
     "jiti": "^2.6.1",
+    "openai": "^4.67.0",
     "ora": "^8.0.0"
   },
   "devDependencies": {
