--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -41,6 +41,10 @@
     "url": "https://github.com/lynncen/translink-i18n.git",
     "directory": "packages/vite-plugin"
   },
+  "homepage": "https://github.com/lynncen/translink-i18n#readme",
+  "bugs": {
+    "url": "https://github.com/lynncen/translink-i18n/issues"
+  },
   "peerDependencies": {
     "vite": "^4.0.0 || ^5.0.0"
   },
