docs(plugin-vika): update Vika plugin documentation and metadata
- Update README with complete English documentation
- Add repository, homepage, and bugs fields to package.json
- Include cloud collaboration workflow and command documentation

--- a/packages/plugins/vika/package.json
+++ b/packages/plugins/vika/package.json
@@ -30,6 +30,15 @@
   ],
   "author": "lynncen",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lynncen/translink-i18n.git",
+    "directory": "packages/plugins/vika"
+  },
+  "homepage": "https://github.com/lynncen/translink-i18n#readme",
+  "bugs": {
+    "url": "https://github.com/lynncen/translink-i18n/issues"
+  },
   "dependencies": {
     "@translink/i18n-cli": "workspace:*"
   },
