--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-vue": "^10.5.0",
+    "prettier": "^3.8.0",
     "tsx": "^4.20.0",
     "turbo": "^1.13.0"
   },
