config: add formatting configurations for Vue files
- Add Vue-specific options to .prettierrc (vueIndentScriptAndStyle, singleAttributePerLine)
- Create .prettierignore to exclude build artifacts and dependencies
- Add Vue file configuration to .editorconfig
- Update ESLint to use Vue 3 recommended rules

This resolves formatting inconsistency issues in Vue files.

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,7 @@
   "endOfLine": "lf",
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "vueIndentScriptAndStyle": false,
+  "singleAttributePerLine": false
 }
