--- a/.prettierignore
+++ b/.prettierignore
@@ -1,20 +1,33 @@
-node_modules/
-dist/
-.turbo/
-coverage/
-*.d.ts
-.eslintcache
+# Dependencies
+node_modules
 pnpm-lock.yaml
-.pnpm-debug.log*
-.DS_Store
+
+# Build outputs
+dist
+.turbo
+coverage
+
+# Cache
+.eslintcache
+*.tsbuildinfo
+
+# Logs
 *.log
-.idea/
-*.min.js
-*.min.css
-public/
-build/
-.next/
-.nuxt/
-.output/
-.vercel/
-.netlify/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Temp
+*.tmp
+.temp
