style: apply prettier formatting to plugin packages
- Format Vika plugin package (package.json, configs)
- Format Vite plugin package (package.json, configs)
- Ensure consistent JSON and TypeScript formatting

No functional changes, only formatting improvements.

--- a/packages/plugins/vika/tsconfig.json
+++ b/packages/plugins/vika/tsconfig.json
@@ -5,9 +5,7 @@
     "noEmit": true,
     "moduleResolution": "bundler"
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "dist",
@@ -16,4 +14,3 @@
     "tests/**"
   ]
 }
-
