--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -48,11 +48,12 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@translink/hash": "workspace:*",
     "lru-cache": "^10.1.0"
   },
   "peerDependencies": {
-    "vue": "^3.0.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "vue": "^3.0.0"
   },
   "peerDependenciesMeta": {
     "vue": {
@@ -63,14 +64,14 @@
     }
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "tsup": "^8.0.0",
-    "vitest": "^1.2.0",
-    "vue": "^3.4.0",
-    "react": "^18.2.0",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
-    "rimraf": "^5.0.0"
+    "react": "^18.2.0",
+    "rimraf": "^5.0.0",
+    "tsup": "^8.0.0",
+    "typescript": "^5.3.0",
+    "vitest": "^1.2.0",
+    "vue": "^3.4.0"
   },
   "engines": {
     "node": ">=16.0.0"
