refactor(cli): remove hash configuration and integrate @translink/hash
- Remove all hash algorithm/length/format configurations from types and defaults
- Simplify HashGenerator to use @translink/hash directly
- Remove generateContentHash and toNumericHash methods (now in @translink/hash)
- Simplify collision handling with fixed file-based context strategy
- Remove constructor config parameter (zero-configuration approach)
- Add @translink/hash as dependency in package.json
- Code reduction: ~40 lines of redundant configuration code

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,7 +42,11 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.30.0",
+    "@babel/parser": "^7.28.6",
+    "@babel/traverse": "^7.28.6",
+    "@babel/types": "^7.28.6",
     "@google/generative-ai": "^0.21.0",
+    "@translink/hash": "workspace:*",
     "commander": "^11.1.0",
     "exceljs": "^4.4.0",
     "fs-extra": "^11.2.0",
